--- a/examples/oneapi/cpp/makefile_lnx
+++ b/examples/oneapi/cpp/makefile_lnx
@@ -148,6 +148,9 @@ vpath %.cpp $(addprefix ./source/,decision_forest kmeans kmeans_init knn linear_
 
 .SECONDARY:
 $(RES_DIR)/%.exe: %.cpp | $(RES_DIR)/.
+	echo "HERE"
+	which $(CC)
+	$(CC) --version
 	$(CC) $(COPTS) $< -o $@ $(LOPTS)
 
 $(RES_DIR)/%.res:  $(RES_DIR)/%.exe
